update : include helper functions

--- a/hmm-pos-tagging.ipynb
+++ b/hmm-pos-tagging.ipynb
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Manually Tagging Test Dataset"
+    "#### Tagging Test Dataset With NLTK POS Tagger"
    ]
   },
   {
@@ -161,8 +161,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'words with tagged with ADP'\n",
-      "['Before', 'as', 'at', 'by', 'from', 'in', 'of', 'on', 'since', 'that', 'with']\n"
+      "'words with tagged with ADJ'\n",
+      "['best-selling',\n",
+      " 'cheapest',\n",
+      " 'domineering',\n",
+      " 'first',\n",
+      " 'international',\n",
+      " 'mobile',\n",
+      " 'online',\n",
+      " 'social']\n"
      ]
     }
    ],
@@ -242,8 +249,8 @@
     "tokens = [pair[0] for pair in train_tagged_words]\n",
     "print('total number of words in the training set : {0}'.format(len(tokens)))\n",
     "\n",
-    "V = set(tokens)\n",
-    "print('total number of unique words in the training set: {0}'.format(len(V)))"
+    "vocabulary = set(tokens)\n",
+    "print('total number of unique words in the training set: {0}'.format(len(vocabulary)))"
    ]
   },
   {
@@ -266,6 +273,127 @@
     "\n",
     "print('number of tags in the universal tagset : {}'.format(len(unique_tags)))\n",
     "print(unique_tags)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Helper Functions\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Store number of times a tag 'T' appears in the training dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'.': 11130, 'ADJ': 6063, 'ADP': 9387, 'ADV': 3052, 'CONJ': 2144, 'DET': 8269, 'NOUN': 27471, 'NUM': 3364, 'PRON': 2619, 'PRT': 3070, 'VERB': 12910, 'X': 6320}\n"
+     ]
+    }
+   ],
+   "source": [
+    "tag_count_dict = dict()\n",
+    "\n",
+    "for utag in unique_tags:\n",
+    "    tag_list = [pair[1] for pair in train_tagged_words if pair[1] == utag]\n",
+    "    tag_count_dict[utag] = len(tag_list)\n",
+    "    \n",
+    "print(tag_count_dict)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### List of Unknown Words in Validation Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of unknown words in validation data set : 335\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_data_unknown_words = [word for sent in validation_set for (word, tag) in sent if word not in vocabulary]\n",
+    "print('number of unknown words in validation data set : {0}'.format(len(set(val_data_unknown_words))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### List of Unknown Words in Test Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of unknown words in test data set : 28\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_data_unknown_words = [word for word in test_data_words if word not in vocabulary]\n",
+    "print('number of unknown words in test data set : {0}'.format(len(set(test_data_unknown_words))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate Number of Words correctly tagged in Test Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_test_dataset_accuracy(tagged_test_set):\n",
+    "    total_words = 0\n",
+    "    correct_tagged_words = 0\n",
+    "\n",
+    "    for word, tag in tagged_test_set:\n",
+    "        try:\n",
+    "            list_for_tag = test_tagged_words[tag]\n",
+    "        except KeyError:\n",
+    "            list_for_tag = []\n",
+    "\n",
+    "        total_words += 1\n",
+    "\n",
+    "        if word in list_for_tag:\n",
+    "            correct_tagged_words += 1\n",
+    "\n",
+    "    print('total words - {0}. correctly tagged words - {1}. accuracy - {2}'.\n",
+    "          format(total_words, correct_tagged_words,\n",
+    "                 correct_tagged_words / total_words))"
    ]
   },
   {
