feat : vanilla viterbi pos tagger

--- a/hmm-pos-tagging.ipynb
+++ b/hmm-pos-tagging.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -770,6 +770,286 @@
    ],
    "source": [
     "df_tag.loc['.', :]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Vanilla Viterbi Based POS Tagger\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Viterbi_Vanilla(words, train_bag=train_tagged_words):\n",
+    "    state = []\n",
+    "    \n",
+    "    for key, word in enumerate(words):\n",
+    "        #initialise list of probability column for a given observation\n",
+    "        p = []\n",
+    "        for tag in unique_tags:\n",
+    "            if key == 0:\n",
+    "                transition_p = df_tag.loc['.', tag]\n",
+    "            else:\n",
+    "                transition_p = df_tag.loc[state[-1], tag]\n",
+    "\n",
+    "            # compute emission and state probabilities\n",
+    "            emission_p = word_given_tag(words[key], tag) / tag_count_dict[tag]\n",
+    "            state_probability = emission_p * transition_p\n",
+    "            \n",
+    "            p.append(state_probability)\n",
+    "\n",
+    "        pmax = max(p)\n",
+    "        \n",
+    "        # getting state for which probability is maximum\n",
+    "        # tagging unknown words as 'X' to mark those as foreign words\n",
+    "        if pmax == 0:\n",
+    "            state_max = 'X'\n",
+    "        else:    \n",
+    "            state_max = unique_tags[p.index(pmax)]\n",
+    "\n",
+    "        state.append(state_max)\n",
+    "\n",
+    "    return list(zip(words, state))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Running Algorithm On Validation Dataset\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(1234)\n",
+    "\n",
+    "random_indices = [random.randint(1, len(validation_set)) for x in range(5)]\n",
+    "\n",
+    "validation_run = [validation_set[i] for i in random_indices]\n",
+    "\n",
+    "validation_run_base = [tup for sent in validation_run for tup in sent]\n",
+    "\n",
+    "validation_untagged_words = [tup[0] for tup in validation_run_base]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of words in selected validation set : 166\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('number of words in selected validation set : {0}'.format(len(validation_untagged_words)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 20.5 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "validation_tagged_sent = Viterbi_Vanilla(validation_untagged_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Model Validation\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8674698795180723"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correct_tags = [i for i, j in zip(validation_run_base, validation_tagged_sent) if i == j]\n",
+    "\n",
+    "accuracy = len(correct_tags) / len(validation_run_base)\n",
+    "\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(('sell', 'NOUN'), ('sell', 'VERB')),\n",
+       " (('printers', 'NOUN'), ('printers', 'X')),\n",
+       " (('there', 'ADV'), ('there', 'DET')),\n",
+       " (('Gunmen', 'NOUN'), ('Gunmen', 'X')),\n",
+       " (('Lebanon', 'NOUN'), ('Lebanon', 'X')),\n",
+       " (('assassinated', 'VERB'), ('assassinated', 'X')),\n",
+       " (('Arabian', 'NOUN'), ('Arabian', 'X')),\n",
+       " (('pro-Iranian', 'ADJ'), ('pro-Iranian', 'X')),\n",
+       " (('Islamic', 'NOUN'), ('Islamic', 'X')),\n",
+       " (('slaying', 'NOUN'), ('slaying', 'X')),\n",
+       " (('avenge', 'VERB'), ('avenge', 'X')),\n",
+       " (('beheading', 'NOUN'), ('beheading', 'X')),\n",
+       " (('terrorists', 'NOUN'), ('terrorists', 'X')),\n",
+       " (('Riyadh', 'NOUN'), ('Riyadh', 'X')),\n",
+       " (('Card', 'NOUN'), ('Card', 'X')),\n",
+       " (('sweepstakes', 'NOUN'), ('sweepstakes', 'X')),\n",
+       " (('forthcoming', 'ADJ'), ('forthcoming', 'X')),\n",
+       " (('10-year', 'NUM'), ('10-year', 'ADJ')),\n",
+       " (('yen-denominated', 'ADJ'), ('yen-denominated', 'X')),\n",
+       " (('about', 'ADV'), ('about', 'ADP')),\n",
+       " (('redeeming', 'VERB'), ('redeeming', 'X')),\n",
+       " (('convert', 'VERB'), ('convert', 'X'))]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validation_incorrect_tagged_words = [(i, j) for i, j in zip(validation_run_base, validation_tagged_sent) if i != j]\n",
+    "\n",
+    "print(len(validation_incorrect_tagged_words))\n",
+    "validation_incorrect_tagged_words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> -  *Accuracy of Vanilla Viterbi - in **high 80s** depending on validation dataset*\n",
+    "-  *Number of incorrect tagged words from validation set : **22** words*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. Running Algorithm On Test Dataset\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 27.3 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "test_tagged_set = Viterbi_Vanilla(test_data_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate Test Dataset Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total words - 181. correctly tagged words - 139. accuracy - 0.7679558011049724\n"
+     ]
+    }
+   ],
+   "source": [
+    "calc_test_dataset_accuracy(test_tagged_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Android', 'X'), ('Google', 'X'), ('Android', 'X'), ('OS', 'X'), ('worldwide', 'X'), ('smartphones', 'X'), ('2011', 'X'), ('2013', 'X'), ('Google', 'X'), ('Twitter', 'X'), ('2015', 'X'), ('Google', 'X'), ('Twitter', 'X'), ('firehose', 'X'), ('Twitter', 'X'), ('online', 'X'), ('interact', 'X'), ('messages', 'X'), ('tweets', 'X'), ('domineering', 'X'), ('personality', 'X'), ('2018', 'X'), ('FIFA', 'X'), ('Cup', 'X'), ('21st', 'X'), ('FIFA', 'X'), ('Cup', 'X'), ('tournament', 'X'), ('contested', 'X'), ('Cup', 'X'), ('trips', 'X'), ('arriving', 'X'), ('NASA', 'X'), ('invited', 'X'), ('ICESAT-2', 'X'), ('Satellite', 'X')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_unknown_tagged_words = [tup for tup in test_tagged_set if tup[0] in test_data_unknown_words]\n",
+    "\n",
+    "print(test_unknown_tagged_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> -  *all unknown words have been assigned the <b>1st tag</b> present in the universal tagset*\n",
+    "-  *all unknown proper nouns like <b>Android</b> and <b>Google</b> are incorrectly tagged*\n",
+    "-  *all unknown numbers like <b>2013</b> and <b>2015</b> are incorrectly tagged*\n",
+    "-  *all unknown verbs like <b>contested</b> and <b>arriving</b> are incorrectly tagged*\n",
+    "\n",
+    "> -  *overall accuracy obtained on test data set : <b>76.79%</b>*"
    ]
   },
   {
