update : helper functions for trigram tagger

--- a/hmm-pos-tagging.ipynb
+++ b/hmm-pos-tagging.ipynb
@@ -1053,6 +1053,282 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solve Unknown Words Problem\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Method 1 : Combine Viterbi With Trigram State\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> For an unknown word, use the following to compute a tag : \n",
+    "-  calculate maximum likelihood estimate of a transition probability of :\n",
+    "     -  unigram tags\n",
+    "     -  bigram tags i.e. P(t2 | t1) = C(t1, t2) / C(t1)\n",
+    "     -  trigram tags i.e. P(t3 | t2, t1) = C(t1, t2, t3) / C(t1, t2)\n",
+    "-  if unknown word is the first word of a sentence, use **start probability**\n",
+    "-  if unknown word is the second word of a sentence, use **bigram probability**\n",
+    "-  if unknown word is present in any other position of a sentence, use **trigram probability**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Calculate Tag Sequences & Probabilities\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate 'n' gram tag sequences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> -  Sample output when n = 1 \n",
+    "    -  `('.',), ('DET',), ('NOUN',), ('ADP',), ('ADJ',), ('NOUN',)`\n",
+    "-  Sample output when n = 2\n",
+    "   -  `('NOUN', 'ADJ'), ('ADJ', 'CONJ'), ('CONJ', 'ADP'), ('ADP', 'NUM')`\n",
+    "-  Sameple output when n = 3\n",
+    "   -  `('VERB', 'ADP', 'DET'), ('ADP', 'DET', 'ADJ'), ('DET', 'ADJ', 'NOUN')`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_n_tag_seq(input_tags, n):\n",
+    "    tag_seq = [tuple(input_tags[i:(i + n)]) for i in range(len(input_tags) - n + 1)]\n",
+    "    return tag_seq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate 'n' gram tag counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> -  Sample output for unigram tags \n",
+    "    -  `('.',): 10611, ('DET',): 7047, ('NOUN',): 24722, ('ADP',): 8745`\n",
+    "-  Sample output for bigram tags\n",
+    "   -  `('X', 'ADP'): 915, ('.', 'VERB'): 950, ('VERB', 'DET'): 1723, ('NOUN', 'X'): 799`\n",
+    "-  Sameple output for trigram tags\n",
+    "   -  `('DET', 'NOUN', '.'): 862, ('NOUN', '.', 'DET'): 711, ('.', 'DET', 'NOUN'): 592`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_tag_seq_counts(sent_tags):\n",
+    "    unigram_dict = defaultdict(int)\n",
+    "    bigram_dict = defaultdict(int)\n",
+    "    trigram_dict = defaultdict(int)\n",
+    "\n",
+    "    unigram_tags = generate_n_tag_seq(sent_tags[2:], 1)\n",
+    "    bigram_tags = generate_n_tag_seq(sent_tags[1:], 2)\n",
+    "    trigram_tags = generate_n_tag_seq(sent_tags, 3)\n",
+    "    \n",
+    "    for unigram in unigram_tags:\n",
+    "        unigram_dict[unigram] += 1\n",
+    "\n",
+    "    for bigram in bigram_tags:\n",
+    "        bigram_dict[bigram] += 1\n",
+    "\n",
+    "    for trigram in trigram_tags:\n",
+    "        trigram_dict[trigram] += 1\n",
+    "\n",
+    "    return unigram_dict, bigram_dict, trigram_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate 'n' gram tag probability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Returns unigram, bigram and trigram tag sequence probabilities in 3 separate dictionary objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_tag_seq_prob(sent_tags, unigram_dict, bigram_dict, trigram_dict):\n",
+    "    unigram_prob_dict = defaultdict(int)\n",
+    "    bigram_prob_dict = defaultdict(int)\n",
+    "    trigram_prob_dict = defaultdict(int)\n",
+    "\n",
+    "    unigram_total = sum(unigram_dict.values())\n",
+    "\n",
+    "    unigram_prob_dict = {a: (unigram_dict[a] / unigram_total) for a in unigram_dict}\n",
+    "\n",
+    "    bigram_prob_dict = {(a, b): (bigram_dict[(a, b)] / unigram_dict[(a, )])\n",
+    "                        for a, b in bigram_dict}\n",
+    "    \n",
+    "    trigram_prob_dict = {(a, b, c): (trigram_dict[(a, b, c)] / bigram_dict[(a, b)])\n",
+    "                         for a, b, c in trigram_dict}\n",
+    "    \n",
+    "    return unigram_prob_dict, bigram_prob_dict, trigram_prob_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate 'n' gram tag probabilities\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unigram_dict, bigram_dict, trigram_dict = generate_tag_seq_counts(all_tags)\n",
+    "\n",
+    "unigram_prob_dict, bigram_prob_dict, trigram_prob_dict = generate_tag_seq_prob(\n",
+    "    all_tags, unigram_dict, bigram_dict, trigram_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate which tag has the maximum unigram probability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NOUN'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob2tag = {v: k for k, v in unigram_prob_dict.items()}\n",
+    "max_prob = max(unigram_prob_dict.values())\n",
+    "\n",
+    "tag_max_uni_prob = prob2tag[max_prob]\n",
+    "tag_max_uni_prob[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate most likely tag 't2' that a given tag 't1' will transition to"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(None,\n",
+       "            {'.': 'NOUN',\n",
+       "             'ADJ': 'NOUN',\n",
+       "             'ADP': 'DET',\n",
+       "             'ADV': 'VERB',\n",
+       "             'CONJ': 'NOUN',\n",
+       "             'DET': 'NOUN',\n",
+       "             'NOUN': 'NOUN',\n",
+       "             'NUM': 'NOUN',\n",
+       "             'PRON': 'VERB',\n",
+       "             'PRT': 'VERB',\n",
+       "             'VERB': 'X',\n",
+       "             'X': 'VERB'})"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tag_big_pair = defaultdict()\n",
+    "\n",
+    "for tag in unique_tags:\n",
+    "    bigram_prob_2_tag = {\n",
+    "        v: k\n",
+    "        for k, v in bigram_prob_dict.items() if k[0] == tag\n",
+    "    }\n",
+    "    max_prob = max(bigram_prob_2_tag.keys())\n",
+    "\n",
+    "    max_bigram_prob_tup = bigram_prob_2_tag[max_prob]\n",
+    "\n",
+    "    tag_big_pair[max_bigram_prob_tup[0]] = max_bigram_prob_tup[1]\n",
+    "\n",
+    "tag_big_pair"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_t3_given_t2_and_t1(t1, t2):\n",
+    "    max_prob = 0\n",
+    "\n",
+    "    for tag in unique_tags:\n",
+    "        try:\n",
+    "            v = trigram_prob_dict[(t1, t2, tag)]\n",
+    "            if v > max_prob:\n",
+    "                max_prob = v\n",
+    "                selected_tag = (t1, t2, tag)\n",
+    "        except KeyError:\n",
+    "            v = 0\n",
+    "    \n",
+    "    return selected_tag"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
